  designators, i.e. (nstring-upcase "aa" :start nil :end nil) causes
  an error.

ECLS 0.3
========

* Add name mangling to ECLS:
  - In the preprocessed files (*.d) @package::symbol can be used to
    refer to a lisp function, while @'package::symbol can be used to
    refer to a lisp symbol. The preprocessor translates these names
    into valid C names.
  - Function SI::MANGLE-NAME returns the C name for a lisp symbol
    or function, and tells whether that symbol has been defined as
    external C function already.
  - A new proclamation
	(proclaim '(si::c-export-fname union))
    advises the lisp->C translator to produce a C function with
    mangle named (clLunion in this case), that can be directly called
    from other translated files and from user written code.
  - The dynamic loader can now reexport symbols from object files,
    so that they become available to other files.

* Remove variable si::*system-directory* and use logical hostname
  "SYS:" instead.

* Fix the compiler so that when it finds LOCALLY, MACROLET or
  SYMBOL-MACROLET at the top level, it processes their bodies as top
  level forms as well.


TODO:
=====

* Selectively remove spices from read.d and object.h

* Implement memory collection based on mmap()

* Improve the garbage collector using kernel information about dirty
  pages.

* Improve fixnum_times.

* #'unread-char does not fail when the character differs from the
  original one.

* vector-push-extend may succeed even if the vector is not
  adjustable. Should we be more strict?

* should we relax ASSOC? (See lists156.tst)

* boost setf and generalized places -- the current implementation is
  extremely faulty with respect to the standards.

* expand parse_namestring() to accept scaped strings, spaces, etc.

* fix FEerror* so that it accepts parameters.

* Remove most property lists from standard symbols.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:70 ***
;;; End: ***